Fixed missing spinner on small screens

--- a/app/assets/stylesheets/woople-theme/pagination.css.less
+++ b/app/assets/stylesheets/woople-theme/pagination.css.less
@@ -39,9 +39,17 @@
 
   .previous_page {
     float: left;
+
+    span {
+      display: inline-block;
+    }
   }
   .next_page {
     float: right;
+
+    span {
+      display: inline-block;
+    }
   }
 }
 
